--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -15,6 +15,8 @@ nav .title {
 }
 
 nav button {
+  background-color: rgb(36, 33, 33);
+  color: white;
   float: right;
 }
 
